--- a/config/templates/odk_publish/app_user_export.html
+++ b/config/templates/odk_publish/app_user_export.html
@@ -15,7 +15,7 @@
                     <button type="submit" class="btn btn-outline btn-primary">Export app users</button>
                     <a type="button"
                        class="btn btn-outline"
-                       href="{% url 'odk_publish:app-user-list' request.odk_project.pk %}">Cancel</a>
+                       href="{% url 'odk_publish:app-user-list' request.organization.slug request.odk_project.pk %}">Cancel</a>
                 </div>
             </div>
         </form>
