--- a/config/templates/odk_publish/app_user_import.html
+++ b/config/templates/odk_publish/app_user_import.html
@@ -49,7 +49,7 @@
                     </button>
                     <a type="button"
                        class="btn btn-outline"
-                       href="{% if not confirm %}{% url 'odk_publish:app-user-list' request.odk_project.pk %}{% endif %}"
+                       href="{% if not confirm %}{% url 'odk_publish:app-user-list' request.organization.slug request.odk_project.pk %}{% endif %}"
                        :disabled="submitting">Cancel</a>
                 </div>
             </div>
