--- a/config/templates/odk_publish/form_template_list.html
+++ b/config/templates/odk_publish/form_template_list.html
@@ -5,7 +5,7 @@
 {% endblock page_header %}
 {% block content %}
     <div class="mb-4 items-end justify-between space-y-4 sm:flex sm:space-y-0 md:mb-8">
-        <a href="{% url 'odk_publish:add-form-template' request.odk_project.pk %}"
+        <a href="{% url 'odk_publish:add-form-template' request.organization.slug request.odk_project.pk %}"
            class="btn btn-outline mr-4">Add form template</a>
     </div>
     {% include "patterns/tables/table-partial.html" %}
