--- a/config/templates/invitations/forms/_invite.html
+++ b/config/templates/invitations/forms/_invite.html
@@ -1,10 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-    <p class="mb-4 dark:text-gray-400">
-        {% if not request.organizations %}Create your first organization.{% endif %}
-        You can create multiple organizations and switch between them using the menu on the left sidebar.
-    </p>
-    <div class="mb-4 grid gap-4 sm:grid-cols-2 md:mb-8 lg:grid-cols-3 xl:grid-cols-4">
+    <p class="mb-4 dark:text-gray-400">Invite someone to this organization.</p>
+    <div class="mb-4 grid gap-4 sm:grid-cols-2 md:mb-8">
         {{ form.media }}
         <form method="post" class="max-w-2xl">
             {% csrf_token %}
@@ -18,8 +15,10 @@
                     </div>
                 {% endfor %}
                 <div class="flex items-center space-x-4">
-                    <button type="submit" class="btn btn-outline btn-primary">Save</button>
-                    <a type="button" class="btn btn-outline" href="{% url 'home' %}">Cancel</a>
+                    <button type="submit" class="btn btn-outline btn-primary">Send invite</button>
+                    <a type="button"
+                       class="btn btn-outline"
+                       href="{{ request.organization.get_absolute_url }}">Cancel</a>
                 </div>
             </div>
         </form>
