--- a/config/templates/account/login.html
+++ b/config/templates/account/login.html
@@ -6,6 +6,7 @@
 {% endblock head_title %}
 {% block content %}
     <section class="bg-white dark:bg-gray-900">
+        {% include "includes/messages.html" %}
         <div class="max-w-screen-xl px-4 py-8 mx-auto lg:grid lg:gap-20 lg:py-16 lg:grid-cols-12">
             <div class="flex-col justify-between hidden col-span-6 mr-auto lg:flex xl:mb-0">
                 <div>
