--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -29,7 +29,8 @@
         {% include "includes/navbar.html" %}
         {% block extra-nav %}
         {% endblock extra-nav %}
-        <div class="{% if request.path == '/' %} mt-8 {% elif request.path != '/accounts/login/' %} w-full top-[25px] {% endif %} mb-20">
+        {% include "includes/sidebar.html" %}
+        <div class="{% if request.path == '/' %} mt-23 {% elif request.path != '/accounts/login/' %} top-[25px] mt-15 {% if request.odk_project %}md:mt-28{% endif %} {% endif %} mb-20{% if request.organization %} md:ml-64{% endif %}">
             <section class="antialiased py-8 md:py-12">
                 <div class="mx-auto max-w-screen-xl px-4 2xl:px-0">
                     {% include "includes/breadcrumbs.html" %}
